<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="Reminders"
        android:id="@+id/reminders"
        />

    <item
        android:icon="@drawable/baseline_pets_24"
        android:title="Pets"
        android:id="@+id/customers"
        />

    <item
        android:icon="@drawable/baseline_question_answer_24"
        android:title="Chat"
        android:id="@+id/questions"></item>

</menu>