...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="visible">

        <TextView
            android:id="@+id/addInventoryTextView2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="52dp"
            android:text="Add Pet"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:backgroundTint="#FF9800"
            android:text="Vet Info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/client_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/grey"
            android:text="Logout"
...
