...
        android:id="@+id/constraintLayout21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/global_chat_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Global chat"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
...
