...
        android:id="@+id/client_reminders_default_layout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/client_reminders_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reminders"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/client_reminder_add_button"
            app:layout_constraintStart_toStartOf="parent"
...
